# lightweight-ide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ide.cc  package.json  pnpm-lock.yaml
core/: .gitignore  CMakeLists.txt  DESIGN.md  Makefile  compile_flags.txt  input.py  stream_reader.txt
core/lib/doctest/include/doctest/: doctest.h
core/lib/id/: Id.cc
core/lib/path/: README.md  path.h
core/lib/utils/: utils.h
core/res/: autocomplete.json  autocompletion.json  frequencies.json
core/res/grammar/: brolang.gram  cminmin.gram
core/src/: foo.h  ide.cc  main.cc
core/src/automata/: Components.h  DFA.cc  DFA.h  ENFA.cc  ENFA.h  FA.cc  FA.h  NFA.cc  PDA.cc  PDA.h  PDAInput.cc  PDAInput.h  PDFA.cc  PDFA.h  Value.cc  Value.h
core/src/machines/: CFG.cc  CFG.cpp  CFG.h
core/src/models/: autocompletionGenerator.cc  autocompletionGenerator.h
core/src/other/: cli.cc  cli.h  pythonToEnfa.cc  pythonToEnfa.h  python_to_enfa.cc  python_to_enfa.cpp  python_to_enfa.h
core/src/other/inputfiles/: input_python_code.txt
core/src/parser/: ASTree.cc  ASTree.h  lexer.cc  lexer.h  lr.cc  lr.h  ring_buffer.h  scanner.cc  scanner.h  stream_reader.cc  stream_reader.cpp  stream_reader.h  t.cpp
core/test/: ASTTests.cc  CFGTests.cc  LRTests.cc  LexerTests.cc  PDATests.cc  StreamReaderTests.cc  foo.cc
core/test/res/: PDATests.cc
core/test/res/expected/: ASTTest2.txt  ASTTest3.txt  ASTTest4.txt  CFGTests-BNF2CFG.txt  CFGTests-CFG2BNF.txt  CFGTests-CNF0.txt  CFGTests-EBNF2CFG.txt  CFGTests-LL0.txt  CFGTests-parseFile0.txt  CFGTests-parseFile1.txt  CFGtests-parseFile0.txt  LRTests-factorial_parsing.txt  LexerTests-all.txt  LexerTests-factorial.txt  PDATests-PDA2CFG0.txt  PDATests-parseFile0.txt  ScannerTests-get_next_char.txt  Syntax1.txt  Syntax2.txt
core/test/res/input/: BNF0.json  BNF2CFG.json  CFG2.json  CFG2BNF.json  CNF0.json  EBNF0.txt  EBNF2CFG.txt  Error1.pai  Error2.cmm  Error3.cmm  Error4.pai  LL0.json  PDA2CFG0.json  Syntax1.cmm  Syntax2.cmm  all.bro  factorial.bro  factorial.cmm  scanner.txt
core/tests/automataTests/: DFATests.cc  ENFATests.cc  PDFATests.cc  RETests.cc
core/tests/automataTests/res/expected/: DFATests-parseFile0.json  DFATests-parseFile1.json  DFATests-productDFAUnion0.json  DFATests-productDFAUnion1.json  ENFATests-MSSC2.txt  ENFATests-parseFile0.txt  PDFATests-PDFA2.json  PDFATests-parseFile0.json  PDFATests-parseFile1.json  RETests-toENFA0.txt
core/tests/automataTests/res/input/: ENFA0.json  ENFA2.json  PDFA0.json  PDFA1.json  PDFA2.json
core/tests/machinesTests/: CFGTests.cc
core/tests/machinesTests/res/expected/: CFGTests-parseFile0.txt
core/tests/otherTests/: pythonToEnfaTest.cc  python_to_enfaTest.cc
core/tests/otherTests/res/expected/: otherTests-scan0exp.txt  splitAndIdentify0exp.txt  splitAndIdentify1exp.txt
core/tests/otherTests/res/input/: scan0.txt  splitAndIdentify0.py  splitAndIdentify1.py
data-collector/: analyze.py
data-visualizer/: .gitignore  data.example.json  data.py  input.json  package-lock.json  package.json  pnpm-lock.yaml
data-visualizer/public/: index.html
data-visualizer/src/: App.tsx  Editor.tsx  index.css
documents/: Final presentation.pptx  Proposal.docx  Proposal.pptx  Tasks.xlsx  Voortgangsrapport.xlsx
lib/id/: Id.h
lib/path/: path.cc
src/: ide.cc
src/automata/: Components.h  DFA.cc  FA.h  (+5 more)
(+14 files in other folders)
